# multi_agent_assistant_crewai

./: .gitignore  README.md  pyproject.toml  report.md
src/multi_agent_assistant/: crew.py  main.py
src/multi_agent_assistant/config/: agents.yaml  tasks.yaml
src/multi_agent_assistant/tools/: pipeline_tool.py  prediction_tool.py
tests/: test_jenkins_trigger_tool.py  test_prediction_tool.py
