[project]
name = "multi_agent_assistant"
version = "0.1.0"
description = "multi-agent-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-chat-ui>=0.1.2",
    "crewai[tools]>=0.134.0,<1.0.0",
    "langchain-experimental>=0.3.4",
    "pytest>=8.4.1",
]

[project.scripts]
multi_agent_assistant = "multi_agent_assistant.main:run"
run_crew = "multi_agent_assistant.main:run"
train = "multi_agent_assistant.main:train"
replay = "multi_agent_assistant.main:replay"
test = "multi_agent_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
